Edited for submission of funreg ms
- Changed title of Chapter 3 to also refer to targets & neighbors
- Edited Introduction
- Typeset space between number, n, and unit, U, as n\,U
- Checked shell scripts

--- a/doc/sure.tex
+++ b/doc/sure.tex
@@ -15,7 +15,7 @@
 \chapter{Query Only}\label{ch:q}
 \input{qSim}
 \input{qDat}
-\chapter{Query and Subject}\label{ch:qs}
+\chapter{Query and Subject, or Target and Neighbor}\label{ch:qs}
 \input{qsSim}
 \input{qsDat}
 
