--- a/doc/intro.tex
+++ b/doc/intro.tex
@@ -1,7 +1,7 @@
 Searching for similar sequences is a bioinformatics staple, if not its
 actual raison d'\^etre. This is shown by the popularity of programs
 for similarity search, above all Blast~\cite{alt90:bas,alt97:gap}, but
-also the wide-spread use of a host of similar programs for quickly
+also the wide-spread use of a host of other programs for quickly
 calculating pairwise local alignments like Blat~\cite{ken02:bla} and
 BlastZ~\cite{sch03:hum}. Given this battery of well-established tools,
 the problem of finding \emph{dissimilar}, or unique, regions might
@@ -15,17 +15,17 @@ This repository accompanies a forthcoming review on searching for
 unique regions in genome sequences~\cite{vie25:fas}. We survey three
 published tools for finding unique
 regions, \ty{genmap}~\cite{poc20:gen}, \ty{macle}~\cite{pir19:hig}
-and \ty{fur}~\cite{hau21:fur,vie24:mar}, by applying them so simulated
+and \ty{fur}~\cite{hau21:fur,vie24:mar}, by applying them to simulated
 and real data. We first analyze single query sequences before
 comparing pairs of query and subject sequences. The query/subject
-nomenclature is well known from Blast and similar programs. However,
-it turns out that when searching for unique regions, the most
-interesting combination of query/subject sequences are subjects that
-are the closest distinct relatives of the queries. To emphasize this,
-we have called the queries ``targets'' and the subjects ``neighbors''
-in the review and later in this document.
+nomenclature is well known from Blast and its variants. However, it
+turns out that when searching for unique regions, the most interesting
+combination of query/subject sequences are subjects that are the
+closest distinct relatives of the queries. To emphasize this, we have
+called the queries ``targets'' and the subjects ``neighbors'' in the
+review and also later in this document, starting in Chapter 3.
 
-As a last preliminary, we occasionally mention data on resource
-consumption, which refer to runs under Ubuntu 24.04 on WSL for
+As a last preliminary, we occasionally quote measurements of resource
+consumption. These refer to runs under Ubuntu 24.04 on WSL for
 Windows11 on a consumer-grade laptop with 16 12th Gen Intel i7-1260P
-CPUs and 32 GB of RAM.
+CPUs and 32\,GB of RAM.
