Included treatment of (15,1) mappbability

--- a/doc/sure.tex
+++ b/doc/sure.tex
@@ -18,6 +18,8 @@
 \chapter{Query and Subject, or Target and Neighbor}\label{ch:qs}
 \input{qsSim}
 \input{qsDat}
+\chapter{\ty{fp.awk}: Calculate the False Prediction Rate}
+\input{fp}
 
 \bibliography{ref}
 \end{document}
